# earnorm

./: .augment-guidelines  .cursorignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  codebase.md  docker-compose.yml  implement.md  logs_final_fixed.txt  pyproject.toml  setup.cfg  todo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  topics.yml
.github/workflows/: test.yml
docker/mongodb/init/: 01-init-db.js
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/_static/: custom.css
docs/_build/guides/: installation.html  quickstart.html
docs/guides/: concepts.rst  fields.rst  installation.rst  models.rst  queries.rst  relationships.rst
earnorm/: README.md  __init__.py  api.py  app.py  constants.py  exceptions.py  registry.py  todo.md  types.py  value_objects.py
earnorm/admin/: README.md
earnorm/analytics/: README.md
earnorm/api/: README.md
earnorm/base/: README.md  __init__.py  connection.py  domain.py  env.py  fields.py  model.py  pool.py  recordset.py  registry.py  schema.py  types.py
earnorm/base/core/: fields.py  model.py  registry.py  rule.py  types.py
earnorm/base/database/: README.md  __init__.py  adapter.py  async_adapter.py
earnorm/base/domain/: README.md  __init__.py  builder.py  converter.py  expression.py  operators.py  parser.py  validator.py
earnorm/base/events/: __init__.py  model.py
earnorm/base/fields/: README.md  __init__.py  metadata.py
earnorm/base/model/: README.md  __init__.py  base.py  data_store.py  database.py  decorators.py  descriptors.py  meta.py
earnorm/base/models/: README.md  __init__.py  base.py  decorators.py  interfaces.py  lifecycle.py  persistence.py  types.py  validation.py
earnorm/base/query/: README.md  __init__.py  builder.py  executor.py  parser.py  result.py
earnorm/base/recordset/: README.md  __init__.py  recordset.py
earnorm/base/registry/: README.md  __init__.py  base.py  database.py  model.py  registry.py
earnorm/base/relationships/: README.md  __init__.py  manager.py
earnorm/cache/: README.md  __init__.py  cache.py  lifecycle.py  manager.py  todo.md
earnorm/cache/backends/: base.py  redis.py
earnorm/cache/core/: __init__.py  backend.py  exceptions.py  lock.py  manager.py  metrics.py  serializer.py
earnorm/cache/decorators/: __init__.py  cached.py
earnorm/cache/serializers/: json.py
earnorm/cli/: README.md  schema.py
earnorm/config/: README.md  __init__.py  data.py  exceptions.py  model.py
earnorm/database/: README.md  __init__.py  mappers.py  type_mapping.py
earnorm/db/: README.md  connection.py  transaction.py
earnorm/di/: README.md  __init__.py  container.py  lifecycle.py  providers.py  types.py
earnorm/di/container/: README.md  __init__.py  base.py  factory.py  interfaces.py  service.py
earnorm/di/lifecycle/: README.md  __init__.py  events.py  manager.py  protocol.py
earnorm/di/resolver/: dependency.py
earnorm/events/: README.md  __init__.py  events.py  lifecycle.py  manager.py
earnorm/fields/: README.md  __init__.py  base.py  char.py  interface.py  relation.py  string.py  todo.md  types.py
earnorm/indexing/: README.md
earnorm/integrations/: README.md
earnorm/logging/: README.md  __init__.py  correlation.py  exceptions.py  health.py  metrics_export.py  streaming.py  validation.py
earnorm/metrics/: README.md  __init__.py  base.py  manager.py  metrics.py  mongo.py  prometheus.py
earnorm/middleware/: README.md
earnorm/migration/: README.md
earnorm/models/: group.py  user.py
earnorm/monitoring/: README.md  __init__.py  container.py  events.py  interfaces.py  lifecycle.py  pools.py
earnorm/plugins/: README.md  plugin.py
earnorm/pool/: README.md  __init__.py  base.py  circuit.py  constants.py  context.py  decorators.py  factory.py  manager.py  registry.py  retry.py  types.py  utils.py
earnorm/query/: README.md  builder.py  query.py
earnorm/registry/: README.md  __init__.py  database.py  model.py
earnorm/rules/: base.py
earnorm/security/: README.md  __init__.py  acl.py  audit.py  base.py  encryption.py  groups.py  models.py  rbac.py  rules.py
earnorm/serialization/: README.md
earnorm/testing/: README.md
earnorm/types/: README.md  __init__.py  base.py  database.py  fields.py  models.py  relations.py
earnorm/utils/: README.md  __init__.py  json.py  lazy.py  singleton.py  versioning.py
earnorm/validation/: README.md  decorators.py  validators.py
earnorm/validators/: README.md  __init__.py  base.py  types.py
examples/: 01_app_initialization.py  02_models.py  03_security.py  04_fastapi_integration.py  05_flask_integration.py  06_django_integration.py  07_advanced_features.py
examples/django/: apps.py  main.py  models.py  urls.py  views.py
examples/fastapi/: main.py  models.py
examples/flask/: app.py  main.py  models.py
examples/simple/: config.yaml  main.py  models.py
new_architecture_docs/api/: README.md
new_architecture_docs/cache/: README.md
new_architecture_docs/core/: README.md  advanced_prefetch_mechanisms.md  basemodel_lazy_loading.md  cache_invalidation.md  model_inheritance.md  prefetch_optimization.md  recordset.md  registry_and_environment.md
new_architecture_docs/fields/: README.md
new_architecture_docs/models/: README.md
new_architecture_docs/query/: README.md
new_architecture_docs/registry/: README.md
new_architecture_docs/security/: access_control.md
new_architecture_docs/validation/: README.md
scripts/: fix_mro.py  test.py  update_imports.py
tests/: __init__.py  conftest.py  test_earnorm.py
tests/fields/: __init__.py  test_fields.py  test_validators.py
tests/integration/: test_database_operations.py  test_relationships.py  test_simplified_integration.py
tests/unit/: test_basic_functionality.py  test_final_working.py
(+244 files in other folders)
